--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,226 +1,192 @@
 ---
-title: "Writing Your First Test"
-description: "Follow a hands-on walkthrough to create and run your first test using GoogleTest. Learn the essentials of defining a test case, employing assertion macros, and interpreting test results. This guide ensures a quick win for users new to the framework."
+title: "Writing and Running Your First Test"
+description: "Step through the process of authoring your initial test case using GoogleTest, compiling the test, and running it to view results. This guide introduces key concepts such as the TEST macro, assertions, and basic test structures."
 ---
 
-# Writing Your First Test
+# Writing and Running Your First Test
 
-Welcome to your foundational journey with GoogleTest! This guide takes you through a practical, step-by-step process to create and run your first C++ test using the GoogleTest framework. You'll learn how to define a test case, apply assertion macros effectively, and interpret the output to verify your results. By the end, you will have a working test and a solid grasp of essential testing concepts.
+Step through the process of authoring your initial test case using GoogleTest, compiling the test, and running it to view results. This guide introduces key concepts such as the `TEST` macro, assertions, and basic test structures.
 
 ---
 
-## 1. Understanding the Test Workflow
+## 1. Workflow Overview
 
 ### Task Description
-This guide helps you write your first test case in GoogleTest, understand the test structure, and verify that your test behaves as expected.
+This guide takes you from writing your first simple test case in C++ using the GoogleTest framework, through compiling it with your build system, to running the test binary and interpreting the results.
 
 ### Prerequisites
-- GoogleTest must be installed and configured in your C++ project.
+- GoogleTest must be properly installed or included in your project.
+- A working C++ compiler supporting at least C++17.
 - Basic familiarity with C++ programming.
-- A working build environment with a compiler supporting C++17 or later.
+- A build system prepared to compile and link GoogleTest (e.g., CMake, Bazel).
 
 ### Expected Outcome
-By following this guide, you will have a compiled and runnable test suite that:
-- Defines a test case and test.
-- Uses assertion macros to validate conditions.
-- Runs tests and produces meaningful output.
+By following this guide, you will have:
+- Written a minimal test case using the `TEST` macro.
+- Compiled the test into an executable.
+- Executed the test binary and observed the test results.
 
 ### Time Estimate
-Approximately 15-20 minutes.
+Approximately 20-30 minutes.
 
 ### Difficulty Level
 Beginner
 
 ---
 
-## 2. Creating Your First Test
-
-GoogleTest organizes tests within *test suites*. Each suite can contain multiple tests. Each test verifies a specific behavior or condition.
+## 2. Step-by-Step Instructions
 
 ### Step 1: Include the GoogleTest Header
-Make sure your test source file includes the main GoogleTest header.
+Create a C++ source file and include the GoogleTest header:
 
 ```cpp
 #include <gtest/gtest.h>
 ```
 
-### Step 2: Write a Simple Test Using `TEST`
-Use the `TEST(TestSuiteName, TestName)` macro to define a test. Both names should be valid C++ identifiers without underscores.
+This header includes all core GoogleTest APIs, including macros like `TEST` and assertions.
 
-Here is a simplistic example that tests `Factorial` returns 1 for input 0:
-
-```cpp
-// Define the function under test
-int Factorial(int n) {
-  return (n <= 1) ? 1 : n * Factorial(n - 1);
-}
-
-// Define a test case
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-```
-
-*Explanation:* This test suite is called `FactorialTest`, with a single test named `HandlesZeroInput`. The test asserts that `Factorial(0)` equals 1.
-
-### Step 3: Add More Tests
-You can add more tests in the same suite by repeating the `TEST` macro:
+### Step 2: Write Your First Test Case
+Define a test using the `TEST` macro. The macro takes two parameters: a **test suite name** and a **test name**. Inside the test body, you write assertions to verify conditions.
 
 ```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
+TEST(SampleTest, BasicAssertions) {
+  // Expect equality
+  EXPECT_EQ(7 * 6, 42);
+
+  // Check boolean condition
+  EXPECT_TRUE(1 < 2);
 }
 ```
 
-*Tip:* Grouping related tests in the same suite improves organization and readability.
+**Explanation:**
+- `SampleTest` is the test suite, grouping related tests.
+- `BasicAssertions` is the name of this specific test.
+- `EXPECT_EQ` checks if the two values are equal.
+- `EXPECT_TRUE` verifies the condition is true.
 
----
+### Step 3: Compile the Test Program
+Using your preferred build system (e.g., a simple g++ command or CMake), compile this source into an executable that links GoogleTest libraries.
 
-## 3. Compiling and Running Your Tests
-
-### Step 1: Compile Your Test
-Make sure to link against GoogleTest libraries (`gtest` and `gtest_main` or `gmock` if using mocks).
-
-Example compilation command with `g++`:
+For example, with `g++` (assuming GoogleTest installed and pkg-config available):
 
 ```bash
-g++ -std=c++17 -isystem /path/to/googletest/include -pthread \
-    your_test_file.cc /path/to/googletest/lib/libgtest.a /path/to/googletest/lib/libgtest_main.a \
-    -o your_test_binary
+g++ -std=c++17 -pthread my_test.cc -lgtest_main -lgtest -o my_test
 ```
 
-Replace `/path/to/googletest` with the actual installation path.
+Or with CMake, define your test executable and link against GoogleTest accordingly.
 
-### Step 2: Run Your Test Binary
-Executing your test binary runs all defined tests.
+### Step 4: Run the Test Executable
+Execute the compiled binary:
 
 ```bash
-./your_test_binary
+./my_test
 ```
 
 You should see output similar to:
 
 ```
-[==========] Running 2 tests from 1 test suite.
+[==========] Running 1 test from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput (0 ms)
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
-[----------] 2 tests from FactorialTest (0 ms total)
+[----------] 1 test from SampleTest
+[ RUN      ] SampleTest.BasicAssertions
+[       OK ] SampleTest.BasicAssertions (0 ms)
+[----------] 1 test from SampleTest ran. (0 ms total)
 [----------] Global test environment tear-down
-[==========] 2 tests from 1 test suite ran. (0 ms total)
-[  PASSED  ] 2 tests.
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
 ```
 
-This confirms that your tests passed.
+This confirms your test passed successfully.
+
+### Step 5: Interpret Test Outcomes
+- If your assertions hold true, GoogleTest reports tests as **PASSED**.
+- If an assertion fails, GoogleTest immediately prints the failure details, including the expected and actual values and the file and line number.
+
+Example failure message:
+
+```
+my_test.cc:10: Failure
+Expected equality of these values:
+  7 * 6
+    Which is: 41
+  42
+```
+
+This helps quickly locate and diagnose errors.
+
+### Step 6: Expand Your Tests
+Once comfortable, define more tests within new or existing test suites using the `TEST` or `TEST_F` macros for fixtures.
 
 ---
 
-## 4. Understanding Assertion Macros
+## 3. Examples & Code Samples
 
-GoogleTest offers various assertion macros. The two primary types are:
-
-- `EXPECT_*` (non-fatal): Reports failure but continues running the test.
-- `ASSERT_*` (fatal): Reports failure and aborts the current test immediately.
-
-### Basic Assertion Examples
-
-- Equality check:
-
-  ```cpp
-  EXPECT_EQ(expected, actual);
-  ASSERT_NE(pointer, nullptr);
-  ```
-
-- Boolean checks:
-
-  ```cpp
-  EXPECT_TRUE(condition);
-  ASSERT_FALSE(condition);
-  ```
-
-- String comparison:
-
-  ```cpp
-  EXPECT_STREQ(c_string1, c_string2);
-  ```
-
-### When to use What
-- Use `ASSERT_*` when failure makes continuing the test meaningless or likely to cause crashes.
-- Use `EXPECT_*` for checks where further assertions are still valuable even after failure.
-
-### Custom Messages
-You can append a message to assertions:
-
+### Minimal Test Example
 ```cpp
-EXPECT_EQ(Factorial(0), 1) << "Factorial of zero should be 1";
+#include <gtest/gtest.h>
+
+TEST(SimpleMathTest, Addition) {
+  EXPECT_EQ(2 + 2, 4);
+}
+
+int main(int argc, char** argv) {
+  ::testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
+This example defines one test and runs it using GoogleTest’s main function.
 
----
-
-## 5. Test Naming Best Practices
-
-- Test suite and test names should **not** contain underscores (`_`).
-- Use descriptive names reflecting the functionality or condition tested.
-
-Example:
-
-```cpp
-TEST(StringUtilsTest, ConvertsToUppercaseCorrectly) { ... }
-```
-
-This makes test reports easier to read and reduces potential conflicts.
-
----
-
-## 6. Troubleshooting Common Issues
-
-### Issue: Compiler Error About Missing Default Constructor
-GoogleTest requires the test fixture or test suite class to have a default constructor. If you define custom constructors, ensure to provide a default one.
-
-### Issue: Assertions Not Triggering Failures
-Ensure you include the correct GoogleTest headers and that assertions are inside a `TEST` or `TEST_F` body.
-
-### Debugging Failed Tests
-Run the tests with verbose output:
-
+### Running From Command Line
 ```bash
-./your_test_binary --gtest_verbose=info
+./simple_math_test --gtest_filter=SimpleMathTest.*
 ```
+Runs all tests under `SimpleMathTest` suite.
 
-This shows detailed matching and call logs.
+### Test Assertions
+GoogleTest provides rich assertions:
+- Equality: `EXPECT_EQ(val1, val2)`
+- Boolean: `EXPECT_TRUE(cond)`, `EXPECT_FALSE(cond)`
+- String: `EXPECT_STREQ(str1, str2)`
+- Floating-point approximate equality: `EXPECT_NEAR(val1, val2, abs_error)`
+
+Use assertions liberally to document test expectations clearly.
 
 ---
 
-## 7. Next Steps
+## 4. Troubleshooting & Tips
 
-- Read the [GoogleTest Primer](../primer.md) to deepen your understanding.
-- Explore the [Essential Assertions and Test Patterns](essential-assertions-and-patterns.md) guide.
-- Learn to write parameterized tests for varied inputs ([Writing Parameterized Tests](writing-parameterized-tests.md)).
-- Explore mocking techniques using GoogleMock with [Using Mocks in Unit Tests](using-mocks-in-unit-tests.md).
+### Common Issues
+- **Linker errors:** Ensure you link the test executable with `-lgtest` and `-lpthread`.
+- **Header not found:** Confirm the include paths point to GoogleTest’s headers.
+- **No tests run:** Verify you call `RUN_ALL_TESTS()` in `main()` after `InitGoogleTest`.
+
+### Best Practices
+- Keep tests small and focused on one logical verification.
+- Name test suites and tests clearly to describe their purpose.
+- Use `EXPECT_` macros for non-fatal assertions so all test code runs.
+- Use `ASSERT_` macros when subsequent test code depends on the assertion.
+
+### Performance Considerations
+- Keep each test case fast; avoid dependencies on slow external resources.
+- Use mocks (GoogleMock) to isolate code under test.
+
+### Alternative Approaches
+- When testing complex classes, extend tests by using fixtures via `TEST_F`.
+- Explore parameterized tests once comfortable with basic tests.
 
 ---
 
-## References
-- [GoogleTest Primer](../primer.md)
-- [Assertions Reference](../reference/assertions.md)
-- [Mocking Cookbook (gMock)](gmock_cook_book.md)
-- [Test Case and Suite Definition](../api-reference/core-testing-api/test-case-definition.md)
-- [GoogleTest FAQ](../faq.md)
-- Official repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+## 5. Next Steps & Related Content
 
+- Learn about [Test Fixtures with TEST_F](guides/getting-started/writing-your-first-test.md#test-fixtures) to set up common contexts.
+- Explore the [Mocking Basics](guides/core-workflows/mocking-basics.md) guide to start using mocks for isolation.
+- Read the [Test Discovery Workflow](guides/getting-started/test-discovery-workflow.md) to understand organizing and running tests.
+- Check the [GoogleTest Primer](primer.md) for fundamentals beyond first test.
 
-<Callout title='Tip'>
-To keep your tests clean and maintainable, write one assertion per test when possible. This aids in isolating issues during failures.
-</Callout>
+---
 
-<Callout title='Note'>
-Running `RUN_ALL_TESTS()` returns 0 if all tests pass. Make sure your `main()` returns this value to properly signal test results to your CI or test runner.
-</Callout>
+<Note>
+Remember: Always write tests before your production code to adopt Test-Driven Development practices effectively.
+</Note>
 
 ---
