--- a/guides/core-workflows/using-assertions.mdx
+++ b/guides/core-workflows/using-assertions.mdx
@@ -1,204 +1,327 @@
 ---
 title: "Using Assertions Effectively"
-description: "A deep dive into GoogleTest's assertion macros and utilities, with examples covering equality, exceptions, customized assertions, and practical advice on when to use fatal vs. non-fatal assertions within your test flows."
+description: "Master the versatility of GoogleTest assertions—from equality and exception checks to custom conditions—so you can express intent clearly and catch failures with actionable output."
 ---
 
 # Using Assertions Effectively
 
+Master the versatility of GoogleTest assertions—from equality and exception checks to custom conditions—so you can express intent clearly and catch failures with actionable output.
+
+---
+
 ## Workflow Overview
 
-Assertions in GoogleTest are the foundation of verifying code behavior. This guide helps you understand how to use assertions effectively to write clear, reliable tests that precisely verify the correctness of your code.
+### Task Description
+This guide helps you leverage GoogleTest assertions effectively to write clear, robust, and maintainable unit tests. You'll learn how to apply a variety of assertions—from simple Boolean checks to complex predicate and exception assertions—to express precise test intent and get meaningful feedback on failures.
 
 ### Prerequisites
-
-- Basic familiarity with C++.
-- GoogleTest framework installed and set up.
-- Understanding of test cases and test suites.
+- A working GoogleTest installation and project setup.
+- Basic knowledge of writing tests using GoogleTest.
+- Access to `#include <gtest/gtest.h>` in your test files.
 
 ### Expected Outcome
-
 By following this guide, you will be able to:
-
-- Use various assertion macros suitable for different test scenarios.
-- Differentiate between fatal and non-fatal assertions.
-- Write clear assertions with custom failure messages.
-- Choose appropriate assertions for specific data types and conditions.
+- Use assertion macros properly to verify code correctness.
+- Distinguish between fatal and nonfatal assertions and choose appropriately.
+- Utilize different types of assertions, including binary comparison, string comparisons, floating-point comparisons, exception handling, predicate-based, and death assertions.
+- Write assertions with custom failure messages and understand default behaviors.
 
 ### Time Estimate
-
-10 to 20 minutes to understand and practice assertion usage.
+Approximately 20-30 minutes to review and practice key assertion types.
 
 ### Difficulty Level
-
-Beginner to Intermediate.
-
----
-
-## Understanding Assertions
-
-Assertions are statements that verify conditions during tests. A test's success or failure depends on whether its assertions pass or fail.
-
-There are two categories:
-
-- **Fatal Assertions** (`ASSERT_*` macros): Cause immediate test function exit on failure.
-- **Non-fatal Assertions** (`EXPECT_*` macros): Report failure but allow the test to continue.
-
-Use non-fatal assertions when you want to check multiple conditions in one test. Use fatal assertions when failure should stop further execution (e.g. invalid preconditions).
+Beginner to Intermediate
 
 ---
 
-## Commonly Used Assertions
+## Guide to Using Assertions
 
-### Boolean Conditions
+GoogleTest provides an extensive set of assertion macros and utilities, allowing test authors to express expectations in a way that best fits their test scenario. This guide walks you through practical uses and best practices.
 
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
+### 1. Understanding Assertion Types: EXPECT_ vs ASSERT_
 
-Verify a condition is true or false.
+- **EXPECT_ assertions** produce *nonfatal* failures, allowing the test function to continue running. Use these when you want to check multiple conditions without aborting on first failure.
+- **ASSERT_ assertions** produce *fatal* failures and immediately abort the current test function. Use these when further progress depends on a precondition (e.g., valid object construction).
 
-### Equality and Inequality
-
-For comparing values, GoogleTest provides a range of macros:
-
-- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`
-- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`
-- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)`
-- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)`
-- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)`
-- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)`
-
-**Note:** Use `EXPECT_STREQ`/`ASSERT_STREQ` for C-string content comparison to avoid pointer equality.
-
-### String Assertions
-
-- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)`: Compare C strings for equality.
-- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)`: Compare C strings for inequality.
-- Case insensitive variants: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`.
-
-### Floating-Point Comparisons
-
-Because floating-point numbers can be imprecise, GoogleTest offers approximate equality:
-
-- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)`: For `float` values, compares within 4 ULPs.
-- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)`: For `double` values.
-- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`: Compares within an absolute error bound.
-
-### Exception Assertions
-
-- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW`: Verify code throws a specific exception.
-- `EXPECT_ANY_THROW` / `ASSERT_ANY_THROW`: Verify code throws any exception.
-- `EXPECT_NO_THROW` / `ASSERT_NO_THROW`: Verify code does not throw.
-
----
-
-## Writing Clear Assertions with Custom Messages
-
-You can add informative messages to assertions for easier debugging. Use the streaming operator `<<`:
-
+**Example:**
 ```cpp
-EXPECT_EQ(value, expected) << "Value did not match expected.";
+EXPECT_TRUE(is_valid) << "Validation failed.";  // Test continues even if false.
+ASSERT_TRUE(is_initialized) << "Initialization failed.";  // Test stops if false.
 ```
 
-This message will appear when the assertion fails.
+### 2. Explicit Success and Failure
 
----
+Sometimes, success or failure depends on flow rather than a Boolean condition.
 
-## Best Practices for Effective Assertions
+- Use `SUCCEED()` to explicitly mark a successful assertion (does not guarantee overall test success).
+- Use `FAIL()` to generate a fatal failure unconditionally.
+- Use `ADD_FAILURE()` to add a nonfatal failure unconditionally.
 
-- **Choose the right assertion type:** Use `EXPECT_*` for non-fatal errors when subsequent checks make sense, and `ASSERT_*` for fatal errors requiring test termination.
-- **Avoid overly strict specifications:** Only assert what's essential to prevent fragile tests.
-- **Use matchers for flexibility:** Integrate GoogleMock matchers (see [Matchers Reference](reference/matchers.md)) for convenient argument validation.
-- **Be cautious with floating-point comparisons:** Always prefer `EXPECT_FLOAT_EQ` / `EXPECT_DOUBLE_EQ` or `EXPECT_NEAR` over direct equality.
-- **Prefer `EXPECT_THAT` for rich matching:** It allows assertions with expressive matchers from GoogleMock.
-
----
-
-## Advanced Assertions
-
-### `EXPECT_THAT` and Matchers
-
-Use the versatile `EXPECT_THAT(value, matcher)` to verify that a value matches a sophisticated condition or pattern.
-
-Example:
-
+**Example:**
 ```cpp
-using ::testing::StartsWith;
-EXPECT_THAT(name, StartsWith("John"));
+switch (status) {
+  case OK:
+    SUCCEED();  // Document that this branch corresponds to success.
+    break;
+  default:
+    FAIL() << "Unexpected status code: " << status;
+}
 ```
 
-Combine matchers for complex conditions (see [Matchers Reference](reference/matchers.md)).
+### 3. Boolean Condition Assertions
 
-### Predicate Assertions
+- `EXPECT_TRUE(condition)` and `ASSERT_TRUE(condition)` check that `condition` is true.
+- `EXPECT_FALSE(condition)` and `ASSERT_FALSE(condition)` check that `condition` is false.
 
-Use `EXPECT_PRED*` macros to test custom predicate functions. Example:
+Use these for simple Boolean validations.
 
+### 4. Binary Comparison Assertions
+
+Use these to compare values with standard operators:
+- `EXPECT_EQ(expected, actual)` / `ASSERT_EQ(expected, actual)` — equality (`==`)
+- `EXPECT_NE`/`ASSERT_NE` — inequality (`!=`)
+- `EXPECT_LT`/`ASSERT_LT` — less than
+- `EXPECT_LE`/`ASSERT_LE` — less than or equal to
+- `EXPECT_GT`/`ASSERT_GT` — greater than
+- `EXPECT_GE`/`ASSERT_GE` — greater than or equal to
+
+**Important:**
+- For pointers, `EXPECT_EQ` compares addresses, not pointed-to content.
+- For C strings (`const char*`), use string-specific assertions (see below).
+
+**Example:**
 ```cpp
-bool IsEven(int n) { return n % 2 == 0; }
+EXPECT_EQ(42, result) << "Result does not equal 42";
+ASSERT_LT(value, max_limit);
+```
+
+### 5. String Comparison Assertions (C-strings)
+
+GoogleTest distinguishes **C strings** from objects like `std::string`.
+
+Use these when comparing `const char*` or `wchar_t*`:
+- `EXPECT_STREQ(str1, str2)` — strings have the same content.
+- `EXPECT_STRNE(str1, str2)` — different content.
+- `EXPECT_STRCASEEQ(str1, str2)` — same content ignoring case.
+- `EXPECT_STRCASENE(str1, str2)` — different content ignoring case.
+
+**Example:**
+```cpp
+EXPECT_STREQ("hello", greeting);
+EXPECT_STRCASEEQ(user_input, expected_input);
+```
+
+### 6. Floating-Point Comparisons
+
+Because exact equality comparison of floating-point numbers is usually unsafe due to rounding issues, use special floating-point comparisons:
+
+- `EXPECT_FLOAT_EQ` / `ASSERT_FLOAT_EQ` — compares `float` values approximately (within 4 ULPs).
+- `EXPECT_DOUBLE_EQ` / `ASSERT_DOUBLE_EQ` — compares `double` values approximately (within 4 ULPs).
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR` — verifies values differ by no more than `abs_error`.
+
+**Example:**
+```cpp
+EXPECT_DOUBLE_EQ(3.1415, pi_approximation);
+EXPECT_NEAR(calculated_value, expected_value, 0.001);
+```
+
+### 7. Exception Assertions
+
+When exceptions are enabled, GoogleTest allows you to verify exception behavior:
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(...)` — expects `statement` to throw an exception of specified type.
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(...)` — expects any exception.
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(...)` — expects no exceptions.
+
+**Note:** The `statement` can be a compound block wrapped in `{}`.
+
+**Example:**
+```cpp
+EXPECT_THROW(DivideByZero(), std::runtime_error);
+EXPECT_NO_THROW(DoWorkSafely());
+```
+
+### 8. Using Predicates for Custom Conditions
+
+Sometimes a complex logical condition cannot be expressed with built-in matchers or comparisons. You can use predicate assertions:
+
+- `EXPECT_PRED1(pred, val1)`, ..., `EXPECT_PRED5(pred, val1, ..., val5)` and their `ASSERT_` variants.
+- The `pred` is a function or functor returning `bool` when given the arguments.
+
+GoogleTest will print detailed failure messages including argument values if the predicate fails.
+
+**Example:**
+```cpp
+bool IsEven(int n) { return (n % 2) == 0; }
 EXPECT_PRED1(IsEven, value);
 ```
 
-### Predicate-Formatter Assertions
+For advanced formatting and messages, you can use `EXPECT_PRED_FORMAT` with predicate-formatter functions returning `testing::AssertionResult`.
 
-Define more expressive failure messages with `EXPECT_PRED_FORMAT*` macros.
+### 9. Using Matchers with EXPECT_THAT
 
----
+Use the powerful `EXPECT_THAT(value, matcher)` and `ASSERT_THAT` macros to check conditions with expressive matchers.
 
-## Examples
-
-### Simple Equality Check
+Matchers facilitate readable conditions like checking string prefixes, regex, or composite conditions:
 
 ```cpp
-EXPECT_EQ(Factorial(3), 6) << "Factorial(3) should be 6.";
+using ::testing::StartsWith;
+using ::testing::MatchesRegex;
+
+EXPECT_THAT(my_string, StartsWith("Hello"));
+EXPECT_THAT(code, MatchesRegex("Error .* at line \d+"));
 ```
 
-### Floating Point Nearness
+See the [Matchers Reference](../reference/matchers.md) for an extensive list.
 
+### 10. Death Assertions
+
+GoogleTest supports testing that code terminates or crashes as expected.
+
+- `EXPECT_DEATH(statement, regex)` / `ASSERT_DEATH`: expects `statement` to crash and produce stderr output matching `regex`.
+- Variants include `EXPECT_DEATH_IF_SUPPORTED`, `EXPECT_DEBUG_DEATH`, and `EXPECT_EXIT` with predicates.
+
+**Example:**
 ```cpp
-EXPECT_NEAR(CalculateValue(), 3.14, 0.01);
+EXPECT_DEATH(DoSomethingUnsafe(), "Segmentation fault");
+EXPECT_EXIT(NormalExit(), ::testing::ExitedWithCode(0), "Success");
 ```
 
-### String Prefix Match
+### 11. Adding Custom Failure Messages
 
+All assertion macros support streaming a custom message appended to failure reports using the `<<` operator.
+
+**Example:**
 ```cpp
-EXPECT_THAT(user_name, StartsWith("admin_"));
+EXPECT_EQ(42, GetAnswer()) << "Expected the answer to life";
 ```
 
-### Exception Expectation
+### 12. Best Practices & Tips
 
+- Use `ASSERT_` assertions for critical conditions that must hold before subsequent test steps.
+- Avoid overusing `EXPECT_` that continue execution if failure leads to nonsensical results.
+- Use matchers and predicates to express readable, maintainable conditions.
+- Always provide custom messages if a failure is not self-explanatory.
+- Use death assertions sparingly and only when testing code expected to abort or crash.
+
+---
+
+## Examples & Code Samples
+
+### Basic Boolean Check
 ```cpp
-EXPECT_THROW(OpenFile("path/to/file"), FileNotFoundException);
+TEST(SimpleTest, BooleanAssertion) {
+  bool condition = SomeFunction();
+  EXPECT_TRUE(condition) << "SomeFunction should return true.";
+}
+```
+
+### String Equality Check
+```cpp
+TEST(StringTest, CaseInsensitiveCompare) {
+  const char* input = "Google";
+  EXPECT_STRCASEEQ(input, "google");
+}
+```
+
+### Floating-Point Approximate Equality
+```cpp
+TEST(MathTest, PiCalculation) {
+  double pi_estimate = CalculatePi();
+  EXPECT_NEAR(pi_estimate, 3.1415926535, 1e-6);
+}
+```
+
+### Exception Testing
+```cpp
+TEST(ExceptionTest, ThrowsOnInvalidInput) {
+  EXPECT_THROW(ProcessInput(nullptr), std::invalid_argument);
+}
+```
+
+### Predicate Assertion
+```cpp
+bool IsPrime(int n) {
+  if (n < 2) return false;
+  for (int i = 2; i * i <= n; ++i) {
+    if (n % i == 0) return false;
+  }
+  return true;
+}
+
+TEST(MathTest, PrimeCheck) {
+  EXPECT_PRED1(IsPrime, 7);  // Passes
+  EXPECT_PRED1(IsPrime, 8);  // Fails
+}
+```
+
+### Using Matchers
+```cpp
+#include <gmock/gmock.h>
+using testing::StartsWith;
+
+TEST(StringTest, StartsWithMatcher) {
+  std::string greeting = "Hello, world!";
+  EXPECT_THAT(greeting, StartsWith("Hello"));
+}
+```
+
+### Death Test
+```cpp
+TEST(FatalTest, DeathTestExample) {
+  EXPECT_DEATH(CallCrashFunction(), ".*Segmentation fault.*");
+}
 ```
 
 ---
 
-## Troubleshooting Common Assertion Issues
+## Troubleshooting & Tips
 
-- **Assertion fails unexpectedly:** Check if the expected and actual values are swapped.
-- **Tests crash after assertion:** Ensure fatal assertions (`ASSERT_*`) are used where necessary to stop execution that relies on valid conditions.
-- **Failure message unclear:** Provide custom messages explaining the cause.
-- **Floating-point comparisons failing:** Use approximate equality macros instead of plain equality.
+### Common Issues
+
+- **Assertion macros run on expressions with side effects:** Remember arguments evaluate exactly once; avoid unexpected side effects in assertion expressions.
+- **Comparing pointers with `EXPECT_EQ` expecting content equality:** Use `EXPECT_STREQ` for C strings.
+- **Floating-point equality using `EXPECT_EQ`:** Use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR`.
+- **Exception assertions failing due to disabled exceptions:** Ensure exceptions are enabled in your build.
+- **Death test not working on unsupported platforms:** Use `EXPECT_DEATH_IF_SUPPORTED`.
+
+### Best Practices
+
+- Favor `EXPECT_` to allow multiple assertions per test unless the failure invalidates further checking.
+- Use clear, descriptive custom messages to clarify assertion intent.
+- Define predicates or matchers for complex assertion logic.
+- Use `EXPECT_THAT` with matchers to write expressive assertions.
+- Validate floating-point calculations with approximate assertions.
+
+### Performance Considerations
+
+- Assertions have minimal performance impact but avoid complex computations inside assertion macros.
+- Use `EXPECT_THAT` with matchers for better diagnostics at low runtime cost.
+
+### Alternative Approaches
+
+- Create custom matchers for domain-specific validation to improve test clarity.
+- Use predicate format assertions (`EXPECT_PRED_FORMAT`) when needing detailed failure messages.
+
+---
+
+## Next Steps & Related Content
+
+- **What’s Next:** Explore writing and running your first tests to apply assertions practically.
+- **Related Guides:** 
+  - [Writing and Running Your First Test](../getting-started/first-test-debugging/writing-running-first-test.md)
+  - [Matchers Reference](../api-reference/matchers-and-assertions/gmock-matchers.md)
+  - [Mocking Basics](../guides/core-workflows/mocking-basics.md)
+- **Advanced Topics:** Custom assertions, parameterized assertions, and combining assertions.
+- **Resources:** 
+  - [GoogleTest GitHub Repository](https://github.com/google/googletest)
+  - [Assertions Reference](../reference/assertions.md)
+  - [gMock Cookbook](../guides/core-workflows/expectations-behaviors.md)
 
 ---
 
-## Next Steps
+<Note>
+Remember: `EXPECT_` assertions report failures but continue execution, while `ASSERT_` assertions abort the current function on failure. Choose carefully to get the most precise and meaningful test behavior.
+</Note>
 
-- Explore [Using Assertions in Test Fixtures](guides/core-workflows/structuring-tests.md) for reusing assertions.
-- Delve into [Matchers Reference](reference/matchers.md) for powerful flexible matching.
-- Learn [Writing Your First Test Case](getting-started/first-test-experience/writing-your-first-test.md) to combine assertions with fixtures.
-- Check [Understanding Mocks](guides/mocking-best-practices/intro-mocking.md) to pair assertions with mock behaviors.
 
----
-
-## Summary
-
-This guide equips you to use GoogleTest assertions confidently and effectively, improving your tests’ clarity and robustness. Remember to always match the right assertion macro to your intent, leverage matchers for expressiveness, and provide custom messages that help maintain your test code.
-
-<Tip>
-To prevent order-of-evaluation surprises with assertions, remember that GoogleTest macros evaluate arguments exactly once, so any side effects occur a single time.
-</Tip>
-
-<Tip>
-For complex data types, customize printing by implementing `PrintTo()` functions, so assertion failures deliver meaningful diagnostics.
-</Tip>
-
----
