--- a/guides/core-workflows/mocking-basics.mdx
+++ b/guides/core-workflows/mocking-basics.mdx
@@ -1,390 +1,290 @@
 ---
-title: "Mocking with GoogleMock: A Practical Introduction"
-description: "Discover how to define mock classes, set expectations, and verify behavior using GoogleMock. This page covers creating mocks, core macros, and real-world usage, helping users simulate dependencies and isolate code under test."
+title: "Mocking Functions and Objects"
+description: "Learn how to use GoogleMock to create mock classes, set expectations on functions, and define behaviors for dependencies when testing your code. This guide features realistic scenarios to cement practical mocking techniques."
 ---
 
-# Mocking with GoogleMock: A Practical Introduction
+# Mocking Functions and Objects
 
-## Overview
+## Workflow Overview
 
-This guide equips you with practical knowledge to define mock classes, set expectations, and verify behavior using GoogleMock. It focuses on how to create mocks that simulate dependencies, helping you isolate and validate the code under test effectively.
+### Task Description
+Learn how to create mock classes in GoogleMock, set expectations on mock functions, and control mock object behaviors during testing. This guide empowers you to mimic dependencies, isolate test scenarios, and verify interactions in your C++ code.
 
-You will learn core macros like `MOCK_METHOD`, essential patterns for setting expectations with `EXPECT_CALL`, and how to customize mock behavior for various testing scenarios.
+### Prerequisites
+- Basic familiarity with C++ and virtual functions.
+- GoogleMock integrated into your project (`#include <gmock/gmock.h>`).
+- An interface or base class with virtual methods to mock.
+
+### Expected Outcome
+By completing this guide, you'll be able to:
+- Define mock classes using the `MOCK_METHOD` macro.
+- Set expectations on method calls with `EXPECT_CALL`.
+- Specify default behaviors with `ON_CALL`.
+- Handle complex mocking scenarios like const methods, overloaded methods, templated mocks, and uninteresting calls.
+
+### Time Estimate
+15-30 minutes for basic mock class creation and understanding expectations.
+
+### Difficulty Level
+Beginner to Intermediate
 
 ---
 
-## 1. Introduction to Mocking with GoogleMock
+## Step-by-Step Instructions
 
-When writing tests, relying on real objects can be inefficient or impractical. Mock objects step in by mimicking real interfaces and letting you specify how they are expected to be used at runtime. This enables you to verify:
+### 1. Define a Mock Class
+Mock classes imitate real classes' interfaces for testing purposes.
 
-- Which methods are called
-- How many times they are called
-- With what arguments
-- In what order
-- What the mocked methods return or perform
+- **Create a mock subclass** inheriting from the interface or base class.
+- In the `public:` section, use the `MOCK_METHOD` macro for each method you want to mock.
 
-GoogleMock is designed to simplify creating such mocks for C++ code.
-
----
-
-## 2. Defining a Mock Class with `MOCK_METHOD`
-
-The heart of mocking lies in defining mock classes. You derive a mock class from an interface or base class and use the `MOCK_METHOD` macro to automatically generate mock implementations for virtual methods.
-
-### Syntax
-
+#### Syntax Example
 ```cpp
-MOCK_METHOD(return_type, method_name, (args...), (specifiers));
-```
-
-- `return_type`: The method’s return type
-- `method_name`: The name of the method being mocked
-- `(args...)`: Argument list, inside parentheses
-- `(specifiers)`: Optional qualifiers such as `const`, `override`, `noexcept`, etc.
-
-### Key Details
-
-- `MOCK_METHOD` **must** be used in the `public:` section of the class, regardless of the original method's access level.
-- For methods with commas in argument types (e.g., `std::pair<int, int>`), wrap the type in extra parentheses or use type aliases to avoid parsing errors.
-
-### Example
-
-Suppose you have an interface `Turtle`:
-
-```cpp
-class Turtle {
+class MockFoo : public Foo {
  public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual void Turn(int degrees) = 0;
-  virtual int GetX() const = 0;
+  MOCK_METHOD(ReturnType, MethodName, (Args...), (Specs...));
 };
 ```
 
-Define a mock class:
+#### Key Notes
+- Always add `MOCK_METHOD` in the `public:` section, regardless of base method's access level.
+- For `const` methods, add `(const)` in the specs.
+- Use `(override)` if overriding a virtual method.
+
+#### Handling Types with Commas
+If a return or argument type contains commas, wrap the type in parentheses or define an alias:
 
 ```cpp
-#include <gmock/gmock.h>
+// Wrapping with parentheses
+MOCK_METHOD((std::pair<bool, int>), GetPair, ());
 
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(void, Turn, (int degrees), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
+// Using type alias
+using BoolAndInt = std::pair<bool, int>;
+MOCK_METHOD(BoolAndInt, GetPair, ());
 ```
 
-This gives you a fully functional mock without manually implementing any methods.
+### 2. Set Default Behavior with ON_CALL
 
-<Tip>
-If you encounter parsing errors with complex argument types involving commas, wrap those argument types in parentheses or create a type alias to simplify.
-</Tip>
-
----
-
-## 3. Using Mocks in Your Tests
-
-Once you have a mock class, use the following workflow:
-
-### Steps
-
-1. **Import gMock Namespaces**
-
-   ```cpp
-   using ::testing::_;          // Wildcard matcher
-   using ::testing::Return;     // Action to specify return values
-   using ::testing::AtLeast;    // Cardinality matcher
-   ```
-
-2. **Create Mock Objects**
-   ```cpp
-   MockTurtle mock_turtle;
-   ```
-
-3. **Set Expectations Using `EXPECT_CALL`**
-
-   Declare how your mock is expected to be used before it's exercised.
-
-   ```cpp
-   EXPECT_CALL(mock_turtle, PenDown())
-       .Times(AtLeast(1));
-   EXPECT_CALL(mock_turtle, GetX())
-       .WillOnce(Return(10));
-   ```
-
-4. **Run Code Under Test**
-
-   Pass the mock object to your code and let it execute.
-
-   ```cpp
-   Painter painter(&mock_turtle);
-   painter.DrawCircle(0, 0, 10);
-   ```
-
-5. **Verification**
-
-   GoogleMock automatically verifies the expectations on destruction of the mock object.
-
-### Example Test
+Use `ON_CALL` to define what should happen when a function is called without setting an expectation (no verification of call count):
 
 ```cpp
-#include <gmock/gmock.h>
-#include <gtest/gtest.h>
-
-using ::testing::_;
-using ::testing::Return;
-using ::testing::AtLeast;
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(void, Turn, (int degrees), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-
-TEST(PainterTest, DrawsCircle) {
-  MockTurtle turtle;
-
-  EXPECT_CALL(turtle, PenDown())
-      .Times(AtLeast(1));
-  EXPECT_CALL(turtle, GetX())
-      .WillOnce(Return(100));
-
-  Painter painter(&turtle);
-  bool success = painter.DrawCircle(0, 0, 10);
-
-  EXPECT_TRUE(success);
-}
-```
-
-### Best Practices
-
-- Set expectations **before** exercising your code.
-- Use wildcard matcher `_` to ignore arguments you don't care about.
-- Minimize expectations to what truly matters; avoid over-specifying to reduce brittle tests.
-
-<Note>
-Expectations set after the mock methods have been called are ignored, leading to undefined behavior.
-</Note>
-
----
-
-## 4. Setting Default Behavior with `ON_CALL`
-
-Sometimes you want to specify what your mock does by default without expecting that the method must be called. Use `ON_CALL`:
-
-```cpp
-ON_CALL(mock_object, Method(matchers...))
+ON_CALL(mock_obj, MethodName(matchers...))
     .WillByDefault(action);
 ```
 
-Unlike `EXPECT_CALL`, `ON_CALL` does not impose expectations but tells what to do when the method is called.
+- `ON_CALL` applies default behavior.
+- It's important to use `WillByDefault` exactly once per `ON_CALL`.
+- Use `ON_CALL` primarily for uninteresting calls or fallback behavior.
 
 Example:
-
 ```cpp
-ON_CALL(turtle, GetX()).WillByDefault(Return(42));
+ON_CALL(my_mock, GetValue()).WillByDefault(Return(42));
 ```
 
-This means unless overridden by an expectation, `GetX()` returns 42.
+### 3. Set Expectations with EXPECT_CALL
 
-<Tip>
-`ON_CALL` should be placed in your test fixture `SetUp()` or mock constructor for shared default behaviors.
-</Tip>
+`EXPECT_CALL` both defines behavior and verifies that the call happens as expected.
 
----
-
-## 5. Managing Expectations
-
-### Cardinalities (`Times`)
-
-Control how many times a mock method is expected to be called by chaining the `.Times()` clause on `EXPECT_CALL`:
-
-| Cardinality          | Meaning                                 |
-|----------------------|-----------------------------------------|
-| `AnyNumber()`        | Called any number of times               |
-| `AtLeast(n)`         | Called at least n times                  |
-| `AtMost(n)`          | Called at most n times                   |
-| `Between(m, n)`      | Called between m and n times inclusive  |
-| `Exactly(n)` or `n`  | Called exactly n times                   |
-
-If omitted, GoogleMock infers cardinality based on actions specified.
-
-### Ordering Calls
-
-- By default, calls can happen in any order.
-- To enforce ordering, use the `InSequence` object:
-  
-  ```cpp
-  {
-    InSequence s;
-    EXPECT_CALL(foo, FirstMethod());
-    EXPECT_CALL(foo, SecondMethod());
-  }
-  ```
-
-This requires `FirstMethod()` to be called before `SecondMethod()`.
-
-- Use `Sequence` objects with `.InSequence()` for partial orderings.
-
-### Retiring Expectations
-
-`.RetiresOnSaturation()` makes the expectation inactive when its call limit is reached. Useful when specifying multiple expectations for the same method that differ by argument matchers.
-
----
-
-## 6. Handling Uninteresting Calls: The Nice, Naggy, and Strict Mocks
-
-- **NaggyMock** (default): warns about uninteresting calls (calls without expectations).
-- **NiceMock**: suppresses warnings on uninteresting calls.
-- **StrictMock**: treats uninteresting calls as test failures.
-
-Construct them by wrapping the mock class:
-
+Basic usage:
 ```cpp
-NiceMock<MockTurtle> nice_turtle;
-NaggyMock<MockTurtle> naggy_turtle;
-StrictMock<MockTurtle> strict_turtle;
+EXPECT_CALL(mock_obj, MethodName(matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action);
 ```
 
-Use these variants to control the verbosity and strictness of your tests.
+- Match arguments explicitly or with matchers (e.g., `_` to match anything).
+- `Times()` clause controls expected invocation count (default inferred).
+- `WillOnce` and `WillRepeatedly` control returned values or side effects.
 
-<Note>
-`NiceMock` and `StrictMock` only affect mock methods defined with `MOCK_METHOD` directly in the base class.
-</Note>
-
----
-
-## 7. Troubleshooting Common Issues
-
-### Method Not Mocked (Real Method Called)
-
-Ensure that the method you want to mock is `virtual` in the base class.
-
-### Mocking Overloaded Methods
-
-You must define mocks for each overloaded variant separately.
-
-### Commas in Argument Types
-
-Wrap argument types containing commas in parentheses or use `using` typedefs.
-
-### Default Return Values
-
-For methods returning non-default-constructible types, always specify an explicit action.
-
-### Setting Expectations After Use
-
-Never set expectations after your code has called the mock method; behavior is undefined.
-
-### Mock Object Leak Warnings
-
-GoogleMock verifies expectations on destruction of mock objects. If objects leak, see the warning and either delete the mock or use `Mock::AllowLeak()` to suppress.
-
----
-
-## 8. Advanced Usage
-
-### Delegating Calls
-
-You can delegate calls of mocked methods to:
-
-- A **fake** implementation
-- A **real** object method
-- A base class implementation
-
-This is done via `ON_CALL` to specify default behavior by capturing the delegate.
-
-### Custom Actions
-
-Define custom behaviors in `WillOnce()` or `WillRepeatedly()` using lambdas or callable objects.
-
-### Using Matchers
-
-Use the wide range of built-in matchers (e.g., `_` for any, `Ge`, `Eq`) to specify argument constraints in expectations.
-
-### Partial and Full Ordering
-
-Control call sequencing using `InSequence`, `After`, and `Sequence` objects.
-
----
-
-## 9. Summary
-
-- Define mocks using `MOCK_METHOD` inside your mock classes derived from interfaces.
-- Use `EXPECT_CALL` to set expectations on mock method calls.
-- Use matchers to specify argument conditions and cardinalities to control call count.
-- Use `ON_CALL` to set default mock behavior without imposing expectations.
-- Choose `NiceMock`, `NaggyMock`, or `StrictMock` wrappers to control uninteresting call handling.
-- Verify expectations are set before mock methods are called.
-- Use sequences and partial ordering to test call order dependencies.
-
----
-
-## 10. Resources & Next Steps
-
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly introduction
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Detailed reference on mocking macros and classes
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes for advanced mocking scenarios
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html): Quick look-up for common mock syntax
-- Related Guides:
-  - Mocking Best Practices and Common Pitfalls
-  - Writing Your First Test with GoogleMock
-
----
-
-## 11. Example Illustration of Typical Flow
-
+Example:
 ```cpp
-#include <gmock/gmock.h>
-#include <gtest/gtest.h>
+EXPECT_CALL(turtle, Forward(100))
+    .Times(1);
+```
 
-using ::testing::_;
-using ::testing::Return;
-using ::testing::AtLeast;
+### 4. Handle Overloaded and Const Methods
 
-// 1. Define mock class
-class MockFoo {
+When mocking overloaded functions:
+- Mock each overload separately with appropriate `MOCK_METHOD`.
+- If not mocking all overloads, use `using BaseClass::MethodName;` to avoid hiding.
+
+For const methods, add `(const, override)` in `MOCK_METHOD` specs.
+
+Example:
+```cpp
+class MockFoo : public Foo {
  public:
-  MOCK_METHOD(int, Bar, (int x), ());
+  MOCK_METHOD(int, Add, (int x), (override));
+  MOCK_METHOD(int, Add, (int times, int x), (override));
+  MOCK_METHOD(int, GetValue, (), (const, override));
 };
+```
 
-// 2. Use mock in test
-TEST(FooTest, BarCalled) {
-  MockFoo foo;
+### 5. Use NiceMock, NaggyMock, and StrictMock for Uninteresting Calls
 
-  // 3. Set expectation
-  EXPECT_CALL(foo, Bar(5))
-      .Times(1)
-      .WillOnce(Return(42));
+These wrappers control how uninteresting calls (methods called with no matching `EXPECT_CALL`s) are handled:
 
-  // 4. Exercise
-  int result = foo.Bar(5);
+- **NiceMock<T>**: Suppresses warnings on uninteresting calls.
+- **NaggyMock<T>**: Prints warnings on uninteresting calls (default behavior).
+- **StrictMock<T>**: Treats uninteresting calls as errors.
 
-  // 5. Verification is automatic
-  EXPECT_EQ(result, 42);
+Usage example:
+```cpp
+NiceMock<MockFoo> nice_mock;
+StrictMock<MockFoo> strict_mock;
+EXPECT_CALL(strict_mock, DoThis());
+```
+
+**Note:** Only use these with mock methods defined **directly** in `T` (not inherited). Nested modifiers are not supported.
+
+### 6. Manage Expectations Using Sequences and Ordering
+
+If call order matters, use `InSequence` or `After` clauses:
+
+```cpp
+{
+  InSequence seq;
+  EXPECT_CALL(mock, FirstCall());
+  EXPECT_CALL(mock, SecondCall());
 }
 ```
 
-This test verifies that `Bar(5)` is called once and returns `42`. If the call count or arguments don’t match, the test fails immediately.
+Or:
+```cpp
+Expectation e1 = EXPECT_CALL(mock, FirstCall());
+EXPECT_CALL(mock, SecondCall()).After(e1);
+```
+
+### 7. Verify and Reset Mock Expectations
+
+- Mocks automatically verify expectations on destruction.
+- Verify earlier using `Mock::VerifyAndClearExpectations(&mock_obj);`
+- To reset default actions too, use `Mock::VerifyAndClear(&mock_obj);`
+
+> Avoid setting new expectations after verification.
+
+### 8. Tips on Actions and Matchers
+
+- Use built-in matchers (e.g., `_`, `Eq()`, `Ge()`) to specify argument patterns.
+- Chain actions: `WillOnce(Return(x))`, `WillRepeatedly(Return(y))`.
+- For side effects like modifying an out parameter, use `SetArgPointee<N>(value)`.
+- To invoke a callable argument, use `InvokeArgument<N>(args...)`.
 
 ---
 
-## 12. Practical Tips
+## Examples
 
-- Always mock the interface you own or control.
-- Avoid mocking concrete classes directly unless necessary.
-- Use `NiceMock` during early test development to reduce noise.
-- Reserve `StrictMock` for tests that require strict verification.
-- Use `.RetiresOnSaturation()` for expectations that must deactivate after saturation.
-- When mocking methods with move-only parameters, use lambdas to create new objects on each invocation.
+### Defining a Simple Mock
+```cpp
+class Foo {
+ public:
+  virtual ~Foo() {}
+  virtual int GetValue() const = 0;
+  virtual void SetValue(int v) = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const, override));
+  MOCK_METHOD(void, SetValue, (int v), (override));
+};
+```
+
+### Using NiceMock to Suppress Warnings
+```cpp
+using ::testing::NiceMock;
+
+TEST(MyTest, Example) {
+  NiceMock<MockFoo> mock_foo;
+
+  EXPECT_CALL(mock_foo, SetValue(10));
+
+  mock_foo.SetValue(10);
+  mock_foo.GetValue();  // No warning even though no EXPECT_CALL.
+}
+```
+
+### Setting Default Behavior with ON_CALL
+```cpp
+ON_CALL(mock_foo, GetValue())
+    .WillByDefault(Return(42));
+```
+
+### Setting Expectations with Complex Matchers
+```cpp
+using ::testing::_, ::testing::Ge;
+EXPECT_CALL(mock_foo, SetValue(Ge(5)));
+```
+
+### Mocking Overloads
+```cpp
+class Foo {
+ public:
+  virtual int Add(int x) = 0;
+  virtual int Add(int x, int y) = 0;
+};
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, Add, (int x), (override));
+  MOCK_METHOD(int, Add, (int x, int y), (override));
+};
+
+// In test:
+EXPECT_CALL(mock_foo, Add(5));
+EXPECT_CALL(mock_foo, Add(3, 7));
+```
+
+### Delegating Calls to a Fake Object
+```cpp
+class FakeFoo : public Foo { ... };
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, Compute, (int x), (override));
+
+  void DelegateToFake() {
+    ON_CALL(*this, Compute).
+        WillByDefault([this](int x) { return fake_.Compute(x); });
+  }
+
+ private:
+  FakeFoo fake_;
+};
+```
 
 ---
 
-Unlock the power of GoogleMock to write faster, cleaner, and more maintainable C++ unit tests by simulating dependencies and asserting detailed interaction contracts with your code.
+## Troubleshooting & Tips
+
+### Common Issues
+
+- **Uninteresting call warnings:** If warnings about uninteresting calls annoy you, consider wrapping your mock with `NiceMock`.
+- **Unexpected calls failures:** Check your `EXPECT_CALL`s match the method calls correctly, including argument matchers.
+- **Overloaded method ambiguity:** Use `using BaseClass::Method` or specify all overloads.
+- **Mock methods not invoked:** Verify methods are `virtual`.
+- **Destructor not virtual:** Mock classes must have virtual destructors for proper cleanup.
+
+### Best Practices
+
+- Use `ON_CALL` for default behaviors without expectations.
+- Use `EXPECT_CALL` to verify interactions.
+- Keep expectations minimal and focused.
+- Use sequences only when call order matters.
+- Avoid nesting `NiceMock`, `NaggyMock`, or `StrictMock`.
+
+### Advanced Considerations
+
+- Mock move-only types with care, using lambdas for returning new objects.
+- Use `RetiresOnSaturation()` to make expectations retire once they are satisfied.
+
+---
+
+## Next Steps & Related Content
+
+- Explore [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for recipes on advanced mocking patterns.
+- Study [Matchers Reference](reference/matchers.md) to craft powerful argument matchers.
+- Learn to write custom actions in [Actions API](api-reference/mock-actions-cardinalities/gmock-actions).
+- Understand mock strictness control in [Mock Strictness Control](api-reference/core-apis/gmock-nice-strict-api).
+- Begin with [Writing and Running Your First Test](guides/getting-started/writing-your-first-test) for foundational skills.
+
+---
